[gd_scene load_steps=6 format=3 uid="uid://bkqeenp2sn04y"]

[ext_resource type="Script" path="res://scripts/main_menu.gd" id="1_w5eq5"]
[ext_resource type="FontFile" uid="uid://dgpmvqhinp40v" path="res://fonts/MatrixtypeDisplayBold-6R4e6.ttf" id="2_p66a6"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_2gmxs"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_jpow2"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_26cbf"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_w5eq5")

[node name="LabelTitle" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -56.5
offset_top = 3.0
offset_right = 56.5
offset_bottom = 26.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_p66a6")
text = "Game Title"

[node name="ButtonLeaderboard" type="Button" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = -25.0
offset_right = 76.0
offset_bottom = -2.0
grow_vertical = 0
size_flags_horizontal = 0
size_flags_vertical = 0
focus_neighbor_top = NodePath("../ButtonPlay")
focus_neighbor_bottom = NodePath("../ButtonExit")
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/icon_normal_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("2_p66a6")
theme_override_styles/hover = SubResource("StyleBoxEmpty_2gmxs")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_jpow2")
theme_override_styles/normal = SubResource("StyleBoxEmpty_26cbf")
text = "Scores"

[node name="ButtonPlay" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -28.5
offset_top = -25.0
offset_right = 28.5
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 0
size_flags_vertical = 0
focus_neighbor_top = NodePath("../ButtonExit")
focus_neighbor_bottom = NodePath("../ButtonLeaderboard")
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/icon_normal_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("2_p66a6")
theme_override_styles/hover = SubResource("StyleBoxEmpty_2gmxs")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_jpow2")
theme_override_styles/normal = SubResource("StyleBoxEmpty_26cbf")
text = "Start"

[node name="ButtonExit" type="Button" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -53.0
offset_top = -25.0
offset_right = -8.0
offset_bottom = -2.0
grow_horizontal = 0
grow_vertical = 0
size_flags_horizontal = 0
size_flags_vertical = 0
focus_neighbor_top = NodePath("../ButtonLeaderboard")
focus_neighbor_bottom = NodePath("../ButtonPlay")
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/icon_normal_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("2_p66a6")
theme_override_styles/hover = SubResource("StyleBoxEmpty_2gmxs")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_jpow2")
theme_override_styles/normal = SubResource("StyleBoxEmpty_26cbf")
text = "Exit"

[node name="TextureButtonPlay" type="TextureButton" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[connection signal="pressed" from="ButtonLeaderboard" to="." method="_on_button_play_pressed"]
[connection signal="pressed" from="ButtonLeaderboard" to="." method="_on_button_leaderboard_pressed"]
[connection signal="pressed" from="ButtonPlay" to="." method="_on_button_play_pressed"]
[connection signal="pressed" from="ButtonExit" to="." method="_on_button_exit_pressed"]
